# kaotik

./: Cargo.toml  Cargo.toml.vendored  KULLANIM_KILAVUZU.md  LICENSE  OFFLINE_BUILD.md  README.md  ROADMAP.md  WHITEPAPER.md  build_offline.ps1  setup_vendor.ps1  vendor_hashes.txt
.cargo/: config.toml
.github/workflows/: ci.yml
scripts/: vendor_hashes.ps1
src/: chaotic.README.md  chaotic.rs  cli_ext.rs  crypto.rs  error.rs  ffi.rs  format.rs  lib.rs  main.rs  nist_kyber.rs  password.rs
tauri-app/: README.md  index.html  main.js  package.json  styles.css
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: main.rs
