[package]
name = "kaotik-tauri"
version = "0.1.0"
edition = "2021"
description = "Kaotik cross-platform desktop UI"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1.6", features = ["dialog-open", "dialog-save"] }
zeroize = "1.8"
kaotik = { path = "../.." }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
